<resources>
    <string name="app_name">SNU Board</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_bn_feed">홈</string>
    <string name="activity_main_bn_dept">학과</string>
    <string name="activity_main_bn_saved">관심목록</string>
    <string name="fragment_notice_feed_app_bar_search">검색</string>
    <string name="header_navigation_drawer_close">close button</string>
    <string name="navigation_drawer_activity_main_category1">App</string>
    <string name="navigation_drawer_activity_main_item1">버전 정보</string>
    <string name="navigation_drawer_activity_main_item2">개인정보 처리방침</string>
    <string name="navigation_drawer_activity_main_category2">Notification</string>
    <string name="navigation_drawer_activity_main_version">버전 정보</string>
    <string name="navigation_drawer_activity_main_license">라이센스 정보/개인정보 처리방침</string>
    <string name="navigation_drawer_activity_main_logout">로그아웃</string>
    <string name="navigation_drawer_activity_main_signout">회원 탈퇴</string>
    <string name="navigation_drawer_activity_main_item3">알림 목록</string>
    <string name="navigation_drawer_activity_main_item4">알림 설정</string>
    <string name="tool_bar_fragment_department_follow">학과</string>
    <string name="tool_bar_fragment_saved">관심목록</string>
    <string name="text_item_notice_title">2021학년도 1학기 컴퓨터공학부 개설 교과목별 수업운영 계획 안내</string>
    <string name="text_item_notice_content">2021학년도 1학기 컴퓨터공학부 개설 교과목의 「교과목별 수업 운영 계획」을 붙임과 같이 안내합니다. 2021학년도 1학기 컴퓨터공학부 개설 교과목의 「교과목별 수업 운영 계획」을 붙임과 같이 안내합니다.</string>
    <string name="image_sub_item_notice_info_comment">Comment icon for notice</string>
    <string name="app_explanation">모든 공지사항을 스누보드에서</string>
    <string name="textview_fragment_login_username">Username</string>
    <string name="textview_fragment_login_password">Password</string>
    <string name="button_fragment_login_start">시작하기</string>
    <string name="button_fragment_login_sign_up">회원가입</string>
    <string name="textview_fragment_login_confirm_password">Confirm Password</string>
    <string name="textview_fragment_login_account_explanation"><u>계정이 왜 필요한가요?</u></string>
    <string name="textview_fragment_login_personal_info_explanation"><u>서비스 이용약관 및 개인정보처리방침</u></string>
    <string name="image_view_item_following_department_arrow">detail_arrow_icon</string>
    <string name="image_view_item_department_list_book">book_content</string>
    <string name="image_view_item_navigate_next">navigate_next</string>
    <string name="image_view_fragment_dept_domain">domain</string>
    <string name="text_fragment_dept_eng_college">공과대학</string>
    <string name="tab_activity_dept_home">홈</string>
    <string name="tab_activity_dept_feed">피드</string>
    <string name="fragment_department_home_app_bar_link">링크</string>
    <string name="image_fragment_dept_feed_tag">tag</string>
    <string name="text_view_fragement_dept_feed_follow">팔로우</string>
    <string name="text_view_fragement_dept_feed_color">색</string>
    <string name="image_view_item_color_color_preview">color_preview</string>
    <string name="image_view_item_color_check">check</string>
    <string name="fragment_department_home_app_bar_favoirite_border">좋아요</string>
    <string name="image_view_activity_notice_detail_folder">folder icon</string>
    <string name="text_activity_notice_detail_files">첨부파일</string>
    <string name="edit_text_activity_notice_search_hint">글 제목, 내용을 검색하세요</string>
    <string name="search_icon">search_icon</string>
    <string name="text_activity_notice_search_cancel">취소</string>
    <string name="cancel_icon">cancel_icon</string>
    <string name="text_view_fragement_dept_home_home">태그 필터</string>
    <string name="button_fragment_department_home_apply">필터 적용</string>
    <string name="button_fragment_department_home_erase">초기화</string>
    <string name="app_bar_profile_activity_profile">프로필</string>
    <string name="text_view_activity_profile_email">닉네임</string>
    <string name="header_image">header image</string>
    <string name="snuboard_icon">snuboard_icon</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="button_fragment_policy_agree">동의하기</string>
    <string name="privacy_words">
        SNUBOARD 개인정보취급방침 &lt;br&gt;
총칙&lt;br&gt;
WaffleStudio는 스누보드(SNUBOARD) 및 관련 제반 서비스(이하 “서비스”라고 합니다)를 이용하는 회원의 개인정보 보호를 소중하게 생각하고, 회원의 개인정보를 보호하기 위하여 항상 최선을 다해 노력하고 있습니다.&lt;br&gt;
WaffleStudio는 개인정보 보호 관련 주요 법률인 개인정보 보호법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 “정보통신망법”이라고 합니다.)을 비롯한 모든 개인정보 보호에 관련 법률 규정 및 국가기관 등이 제정한 고시, 훈령, 지침 등을 준수합니다.&lt;br&gt;
&lt;br&gt;
본 개인정보취급방침은 스누보드 및 관련 제반 서비스를 이용하는 회원에 대하여 적용되며, 회원에 대하여 적용되며, 회원이 제공하는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보 보호를 위하여 어떠한 조처를 취하고 있는지 알립니다.&lt;br&gt;
&lt;br&gt;
개인정보의 수집·이용에 대한 동의&lt;br&gt;
적법하고 공정한 방법에 의하여 서비스 이용계약의 성립 및 이행에 필요한 최소한의 개인정보를 수집하며 이용자의 개인 식별이 가능한 개인정보를 수집하기 위하여 회원가입시 개인정보수집·이용 동의에 대한 내용을 제공하고 회원이 \'동의\' 버튼을 클릭하면 개인정보 수집·이용에 대해 동의한 것으로 봅니다.&lt;br&gt;
&lt;br&gt;
개인정보의 수집범위 및 수집방법&lt;br&gt;
1. SNUBOARD 회원가입 등 서비스 제공 및 계약이행을 위해 아래와 같이 개인정보를 수집할 수 있습니다.&lt;br&gt;
- 아이디, 비밀번호, 이메일 주소&lt;br&gt;
2. 서비스 이용과정에서 아래와 같은 정보들이 생성되어 수집될 수 있습니다.&lt;br&gt;
(1) PC : PC MacAddress, PC 사양정보, 브라우저 정보, 기타 서비스 이용 시 사용되는 프로그램 버전 정보&lt;br&gt;
(2) 휴대전화(스마트폰) &amp; 스마트OS 탑재 모바일 기기(Tablet PC 등) : 모델명, 기기별 고유번호(UDID,IMEI 등), OS정보, 이동통신사, 구글/애플 광고 ID&lt;br&gt;
(3) 기타 정보 : 서비스 이용(정지) 기록, 접속 로그, 쿠키, 접속 IP정보&lt;br&gt;
5. SNUBOARD 다음과 같은 방식으로 개인정보를 수집합니다.&lt;br&gt;
(1) 회원이 직접 등록한 개인 정보&lt;br&gt;
6. 기본적 인권침해의 우려가 있는 개인정보(인종 및 민족, 사상 및 신조, 출신지 및 본적지, 정치적 성향 및 범죄기록, 건강상태 및 성생활 등)는 요구하지 않으며, 위의 항목 이외에 다른 어떠한 목적으로도 수집, 사용하지 않습니다.&lt;br&gt;
&lt;br&gt;
개인정보의 수집목적 및 이용목적&lt;br&gt;
SNUBOARD 수집한 개인정보를 다음의 목적으로 활용합니다.&lt;br&gt;
1. 회원관리&lt;br&gt;
회원제 서비스 이용에 따른 본인확인, 개인식별, 불량회원의 부정 이용 방지와 비인가 사용 방지, 중복가입확인, 가입의사 확인&lt;br&gt;
2. 서비스 품질 향상을 목적으로 활용&lt;br&gt;
신규 서비스 개발, 서비스 유효성 확인, 접속 빈도 파악, 회원의 서비스 이용에 대한 통계&lt;br&gt;
&lt;br&gt;
수집한 개인정보의 취급 위탁&lt;br&gt;
SNUBOARD 외부에 개인정보를 위탁하지 않습니다.&lt;br&gt;
&lt;br&gt;
개인정보의 자동 수집 장치의 설치, 운영 및 그 거부에 관한 사항&lt;br&gt;
쿠키란 웹 서버가 웹 브라우저에 보내어 저장했다가 서버의 부가적인 요청이 있을 때 다시 서버로 보내주는 문자열 정보(텍스트 파일)로 회원의 컴퓨터 하드디스크에 저장되며 쿠키 (cookie)에는 사용한 웹사이트의 정보 및 이용자 의 개인정보가 담길 수 있습니다.&lt;br&gt;
1. SNUBOARD 웹 서비스는 인터넷을 통하여 회원의 정보를 저장하고 수시로 찾아내는 쿠키(cookie)를 설치, 운용하고 있습니다. 회원이 웹사이트에 접속을 하면 회원의 브라우저에 있는 쿠키의 내용을 읽고, 추가정보를 찾아 접속에 따른 성명 등의 추가 입력없이 서비스를 제공할 수 있습니다.&lt;br&gt;
2. 회원은 쿠키 설치에 대한 선택권을 가지고 있으며 회원은 웹브라우저에서 옵션을 설정함으로서 모든 쿠키를 허용하거나, 또는 쿠키가 저장될 때마다 확인을 거치거나, 혹은 모든 쿠키의 저장을 거부할 수도 있습니다. 다만, 회원 님께서 쿠키 설치를 거부했을 경우 서비스 제공에 어려움이 발생할 수도 있습니다.&lt;br&gt;
&lt;br&gt;
개인정보의 공유 및 제공&lt;br&gt;
1. 회사는 회원의 개인정보를 본 개인정보취급방침에서 명시된 범위를 초과하여 이용하거나 제 3자(타인 또는 타기업 기관)에 제공하지 않습니다. 다만, 회원의 동의가 있거나 다음 각호의 어느 하나에 해당하는 경우에는 예외로 합니다.&lt;br&gt;
(1) 서비스 제공에 따른 요금 정산을 위하여 필요한 경우&lt;br&gt;
(2) 관계법령에 의하여 수사, 재판 또는 행정상의 목적으로 관계기관으로부터 요구가 있을 경우&lt;br&gt;
(3) 통계작성, 학술연구나 시장조사를 위하여 특정 개인을 식별할 수 없는 형태로 가공하여 제공하는 경우&lt;br&gt;
(4) 금융실명거래및비밀보장에관한법률, 신용정보의이용및보호에관한법률, 전기통신기본법, 전기통신사업법, 지방 세법, 소비자보호법, 한국은행법, 형사소송법 등 기타 관계법령에서 정한 절차에 따른 요청이 있는 경우&lt;br&gt;
2. 영업의 전부 또는 일부를 양도하거나, 합병/상속 등으로 서비스제공자의 권리,의무를 이전 승계하는 경우 개인 정보보호 관련 회원의 권리를 보장하기 위하여 반드시 그 사실을 회원에게 통지합니다.&lt;br&gt;
&lt;br&gt;
개인정보의 보관기간 및 이용기간&lt;br&gt;
1. 이용자의 개인정보는 개인정보의 수집목적 또는 제공받은 목적이 달성되면 파기됩니다. 회원이 회원탈퇴를 하거나 개인정보 허위기재로 인해 회원 ID 삭제 처분을 받은 경우 수집된 개인정보는 완전히 삭제되며 어떠한 용도로도 이용할 수 없도록 처리됩니다.&lt;br&gt;
2. 이용자의 개인정보는 개인정보의 수집 및 이용목적이 달성되면 지체 없이 파기되나, 아래 각 항목에 해당하는 경우에는 명시한 기간 동안 보관할 수 있으며, 그 외 다른 목적으로는 사용하지 않습니다.&lt;br&gt;
(1) 불건전한 서비스 이용으로 서비스에 물의를 일으킨 이용자의 경우 사법기관 수사의뢰를 하거나 다른 회원을 보호할 목적으로 1년간 해당 개인정보를 보관할 수 있습니다.&lt;br&gt;
(2) 관계법령의 규정에 의하여 보관할 필요가 있는 경우 SNUBOARD 수집 및 이용 목적 달성 후에도 관계법령 에서 정한 일정 기간 동안 회원의 개인정보를 보관할 수 있습니다.&lt;br&gt;
가. 계약 또는 청약철회 등에 관한 기록 : 5년&lt;br&gt;
나. 대금결제 및 재화의 공급에 관한 기록 : 5년&lt;br&gt;
다. 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년&lt;br&gt;
라. 표시, 광고에 관한 기록 : 1년&lt;br&gt;
마. 웹사이트 방문기록 : 1년&lt;br&gt;
&lt;br&gt;
회원의 권리와 의무&lt;br&gt;
회원은 본인의 개인정보를 최신의 상태로 정확하게 입력하여 불의의 사고를 예방해주시기 바랍니다. 이용자가 입력한 부정확한 정보로 인해 발생하는 사고의 책임은 이용자 자신에게 있으며 타인 정보의 도용 등 허위정보를 입력 할 경우 계정의 이용이 제한될 수 있습니다.&lt;br&gt;
회사가 운영하는 서비스를 이용하는 회원은 개인정보를 보호 받을 권리와 함께 스스로를 보호하고 타인의 정보를 침해하지 않을 의무도 가지고 있습니다. 회원은 아이디(ID), 비밀번호를 포함한 개인정보가 유출되지 않도록 조심 하여야 하며, 게시물을 포함한 타인의 개인정보를 훼손하지 않도록 유의해야 합니다. 만약 이 같은 책임을 다하지 못하고 타인의 정보 및 타인의 존엄성을 훼손할 경우에는 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」등에 의해 처벌 받을 수 있습니다.&lt;br&gt;
&lt;br&gt;
고지의 의무&lt;br&gt;
현 「개인정보취급방침」 내용의 추가, 삭제 및 수정이 있을 시에는 개정 최소 7일 전부터 알림과 전자우편을 통해 고지하고, 개정 내용이 이용자에게 불리할 경우에는 30일간 고지할 것입니다.&lt;br&gt;
&lt;br&gt;
개인정보관리책임자 및 담당자&lt;br&gt;
WaffleStudio는 회원의 개인정보보호를 가장 중요시하며, 회원의 개인정보가 훼손, 침해 또는 누설되지 않도록 최선을 다하고 있습니다.&lt;br&gt;
[개인정보관리책임자]&lt;br&gt;
SNUBOARD 담당자&lt;br&gt;
전자우편 : snuboard@wafflestudio.com&lt;br&gt;
&lt;br&gt;
기타 개인정보에 관한 상담이 필요한 경우에는 정보통신부 산하 공공기관인 한국인터넷진흥원(KISA) 개인정보침 해신고센터 또는 경찰청 사이버테러대응센터로 문의하시기 바랍니다.&lt;br&gt;
[한국인터넷진흥원 개인정보침해신고센터]&lt;br&gt;
전화번호 : 국번없이 118&lt;br&gt;
홈페이지 주소 : http://privacy.kisa.or.kr [경찰청 사이버테러대응센터]&lt;br&gt;
전화번호 : 02-393-9112&lt;br&gt;
홈페이지 주소 : http://www.netan.go.kr [대검찰청 사이버범죄수사단]&lt;br&gt;
전화번호 : 02-3480-3751&lt;br&gt;
홈페이지 주소 : http://www.spo.go.kr&lt;br&gt;
    </string>
    <string name="button_fragment_policy_read">확인</string>
    <string name="policy_agreement_title"><u>서비스 이용약관 및 개인정보처리방침</u></string>
    <string name="before_icon">before_icon</string>
    <string name="textview_fragment_login_email">Email</string>
    <string name="navigation_drawer_activity_main_item5">개발자 괴롭히기</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="notice_notification_channel_id">notice_notification_channel</string>
    <string name="version_info">버전 정보</string>
    <string name="navigation_drawer_activity_main_item6">팀 스누보드</string>
    <string name="team_info">팀 스누보드</string>
    <string name="version_info_explanation">버전 %1$s\n최신 업데이트 %2$s</string>
    <string name="web">web</string>
    <string name="dialog_signout_title">정말 탈퇴하시겠어요?</string>
    <string name="dialog_signout_content">이 작업은 되돌릴 수 없어요. 탈퇴를 계속 진행하시겠어요?\n\n진행하시려면 %s를 입력해주세요.</string>
    <string name="button_sign_out">이해했습니다. 탈퇴를 진행해주세요.</string>
    <string name="notification_list">알림 목록</string>
    <string name="fragment_department_home_app_bar_notification">알림</string>
    <string name="image_fragment_dept_feed_noti">Notification</string>
    <string name="text_view_fragement_dept_feed_noti">알림</string>
</resources>
