<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/group1_subtitle"
            android:title="@string/navigation_drawer_activity_main_category1">
            <menu>
                <item
                    android:id="@+id/group1_item1"
                    android:icon="@drawable/ic_system_update"
                    android:title="@string/navigation_drawer_activity_main_item1" />
                <item
                    android:id="@+id/group1_item2"
                    android:icon="@drawable/ic_library_books"
                    android:title="@string/navigation_drawer_activity_main_item2" />
                <item
                    android:id="@+id/group1_item3"
                    android:icon="@drawable/ic_email"
                    android:title="@string/navigation_drawer_activity_main_item5" />
                <item
                    android:id="@+id/group1_item4"
                    android:icon="@drawable/ic_groups"
                    android:title="@string/navigation_drawer_activity_main_item6" />
            </menu>
        </item>
    </group>
</menu>
