<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activityViewModel"
            type="com.wafflestudio.snuboard.presentation.auth.AuthActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.LoginFragment">

        <ImageView
            android:id="@+id/app_name_text"
            android:src="@drawable/snuboard_icon"
            android:layout_width="141dp"
            android:layout_height="141dp"
            android:contentDescription="@string/snuboard_icon"
            app:layout_constraintBottom_toTopOf="@id/app_explanation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/app_explanation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/app_explanation"
            android:textColor="@color/blue2"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="124dp"
            android:text="@string/button_fragment_login_sign_up"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/gray1"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/gray1"
            app:strokeWidth="1dp"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_explanation_text" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/tag_selected"
            android:text="@string/button_fragment_login_login"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
