<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activityViewModel"
            type="com.wafflestudio.snuboard.presentation.auth.AuthActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.LoginFragment">


        <TextView
            android:id="@+id/username_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_username"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/username_edit_text"
            app:layout_constraintEnd_toEndOf="@id/username_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/username_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:background="@drawable/et_bottom_line"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_thin"
            android:textSize="18sp"
            android:text="@={activityViewModel.usernameSignUpFragment}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_label_text"
            app:layout_constraintBottom_toTopOf="@id/email_label_text"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/email_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_email"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/email_edit_text"
            app:layout_constraintEnd_toEndOf="@id/email_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/email_edit_text"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bottom_line"
            android:ems="12"
            android:fontFamily="@font/roboto_thin"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@={activityViewModel.emailSignUpFragment}"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label_text"
            app:layout_constraintBottom_toTopOf="@id/password_label_text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_password"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintEnd_toEndOf="@id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bottom_line"
            android:ems="12"
            android:fontFamily="@font/roboto_thin"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@={activityViewModel.passwordSignUpFragment}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label_text"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_label_text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/confirm_password_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_confirm_password"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/confirm_password_edit_text"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/confirm_password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bottom_line"
            android:ems="12"
            android:fontFamily="@font/roboto_thin"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@={activityViewModel.confirmPasswordSignUpFragment}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_label_text"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/policy_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_personal_info_explanation"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="51dp"
            android:text="@string/button_fragment_login_sign_up"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/gray1"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/gray1"
            app:strokeWidth="1dp"
            app:layout_constraintBottom_toTopOf="@id/policy_agreement"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_edit_text"
            app:layout_constraintStart_toStartOf="@id/confirm_password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text" />


        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/before_icon"
            android:src="@drawable/ic_navigate_before"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
