<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activityViewModel"
            type="com.wafflestudio.snuboard.presentation.auth.AuthActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.LoginFragment">

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sriracha_regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/app_explanation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/app_explanation"
            android:textColor="@color/gray4"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_text"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/username_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_username"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/username_edit_text"
            app:layout_constraintEnd_toEndOf="@id/username_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/username_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:background="@drawable/et_bottom_line"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_thin"
            android:textSize="18sp"
            android:text="@={activityViewModel.usernameLoginFragment}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/textview_fragment_login_password"
            android:textColor="@color/gray3"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintEnd_toEndOf="@id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/et_bottom_line"
            android:ems="12"
            android:fontFamily="@font/roboto_thin"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@={activityViewModel.passwordLoginFragment}"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green3"
            android:text="@string/button_fragment_login_login"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_up_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_fragment_login_sign_up"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/gray1"
            android:layout_marginStart="40dp"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/gray1"
            app:strokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>